2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote_old__c/SFDC_520_Quote_old__c.object-meta.xml
<CustomObject>
    <description>Old system for HHG. Simple Quote object which holds dates and line items, many quotes may be related to a single opportunity, a quote may have many detail lines.</description>
    <label>Quote_old</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes_old</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>