2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote_old__c/fields/Internal_Cost__c.field-meta.xml
<CustomField>
    <fullName>Internal_Cost__c</fullName>
    <description>If different than quoted amount, fill in the sum of the line items here</description>
    <label>Internal Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>