2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote_old__c/fields/Markup__c.field-meta.xml
<CustomField>
    <fullName>Markup__c</fullName>
    <formula>(Quote_Amount__c/Internal_Cost__c  )-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Markup</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>