2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote_old__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>R00N200000011mrhEAA</relationshipName>
    <type>Lookup</type>
</CustomField>