2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote_old__c/fields/Presented_Date__c.field-meta.xml
<CustomField>
    <fullName>Presented_Date__c</fullName>
    <label>Presented</label>
    <type>Date</type>
</CustomField>