2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote_old__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if quote is the primary quote to update the opportunity amount</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>