2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote_old__c/fields/Request_Approval__c.field-meta.xml
<CustomField>
    <fullName>Request_Approval__c</fullName>
    <formula>HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N200000008WR1&amp;eid=&quot;&amp;Id, IMAGE(&quot;/servlet/servlet.ImageServer?oid=00D3E00000014nK&amp;id=01520000000AvYn&quot;, &quot;Submit&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Approval</label>
    <type>Text</type>
</CustomField>