2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote_old__c/recordTypes/Approved.recordType-meta.xml
<RecordType>
    <fullName>Approved</fullName>
    <active>true</active>
    <description>All Approved Records are locked. To modify, choose clone with details and create new quote</description>
    <label>Approved</label>
</RecordType>