2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote_old__c/recordTypes/Unapproved.recordType-meta.xml
<RecordType>
    <fullName>Unapproved</fullName>
    <active>true</active>
    <description>Displaying all unapproved quotes</description>
    <label>Unapproved</label>
</RecordType>